--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-   <!--Icono de la pagina--> 
-    <link rel="shortcut icon" href="/assets/file-code.svg" type="image/x-icon">
+  <!--Icono de la pagina-->
+  <link rel="shortcut icon" href="/assets/file-code.svg" type="image/x-icon">
 
   <!--Link de iconos bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <!--Enlace con CSS-->
   <link rel="stylesheet" href="style.css">
   <title>Frida Monserrat Vazquez de la Cruz</title>
+  <!---->
 </head>
 
 <body>
@@ -48,7 +49,7 @@
       <div class="px-4 py-5 my-5 text-center">
         <img class="d-block mx-auto mb-4 rounded-circle" src="/assets/img.jpeg" alt="Foto de perfil" width="200">
         <h1 class="display-5 fw-bold text-body-emphasis">Frida Monserrat Vázquez de la Cruz</h1>
-        <h2>Ingeniera en sistemas | Desarrolladora Front-end Jr </h2>
+        <h2 id="app"></h2>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Estudio Ingeniería en Sistemas Computacionales, una disciplina que combina la informática
             y la ingeniería para desarrollar soluciones tecnológicas innovadoras. Me apasiona el diseño y la
@@ -272,15 +273,21 @@
 
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center pb-3 mb-3">
-      <li class="nav-item"><a href="https://github.com/Frida-Vazquez" target="_blank" class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-github"></i></a></li>
-      <li class="nav-item"><a href="https://mx.linkedin.com/" target="_blank" class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-linkedin"></i></a></li>
-      <li class="nav-item"><a href="https://www.instagram.com/frida._.vazquez_?igsh=a3k0cDlkeG5xcXh6" target="_blank" class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-instagram"></i></a></li>
+      <li class="nav-item"><a href="https://github.com/Frida-Vazquez" target="_blank"
+          class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-github"></i></a></li>
+      <li class="nav-item"><a href="https://mx.linkedin.com/" target="_blank"
+          class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-linkedin"></i></a></li>
+      <li class="nav-item"><a href="https://www.instagram.com/frida._.vazquez_?igsh=a3k0cDlkeG5xcXh6" target="_blank"
+          class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-instagram"></i></a></li>
     </ul>
     <p class="text-center">Creado por Frida Vazquez</p>
   </footer>
 
+  <!--CND Typewriter-->
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
-
+  <!--JS-->
+  <SCript src="main.js"></SCript>
 
   <!--Script Boostrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
