--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+  <header class="d-flex flex-wrap justify-content-center py-3 border-bottom">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
       <svg class="bi me-2" width="40" height="32">
         <use xlink:href="#bootstrap"></use>
@@ -47,7 +47,7 @@
   <main>
     <section id="sobre-mi">
       <div class="sob-bg">
-        <div class="px-4 py-5 my-5 text-center">
+        <div class="px-4 py-5 text-center">
           <img class="d-block mx-auto mb-4 rounded-circle" src="/assets/img.jpeg" alt="Foto de perfil" width="200">
           <h1 class="display-5 fw-bold text-body-emphasis">Frida Monserrat Vázquez de la Cruz</h1>
           <h2 id="app" style="color: #2F3645;"></h2>
@@ -277,7 +277,7 @@
 
 
     <section id="contacto">
-      <div class="container1 my-5">
+      <div class="container1">
         <div class="p-5 text-center rounded-3" id="bg">
           <i class="bi bi-envelope-heart" style="font-size: 100px; color: #2F3645;"></i>
           <h1 class="text-body-emphasis">¡Contáctame!</h1>
@@ -296,7 +296,7 @@
     </section>
   </main>
 
-  <footer class="py-3 my-4">
+  <footer class="py-3">
     <ul class="nav justify-content-center pb-3 mb-3">
       <li class="nav-item"><a href="https://github.com/Frida-Vazquez" target="_blank"
           class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-github"></i></a></li>
